--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,26 @@
 Package: Earthquakes
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Analyzes and Visualizes Earthquake Data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Christopher Pearson
+Maintainer: The package maintainer <cmpear@uw.edu>
+Description: Takes in quake data from National Oceanic and Atmospheric Administration. 
+    Includes two ggplot2 visuals for the data: one for generating timelines, and the other for generating maps of quake data.
+    NOAA website: https://www.ngdc.noaa.gov/nndc/struts/form?t=101650&s=1&d=1.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
+Imports:
+  tibble,
+  readr,
+  leaflet,
+  lubridate,
+  stringr,
+  usethis
+Depends:
+  tidyr,
+  dplyr,
+  ggplot2,
+  R (>= 2.10)
+  
