--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,15 +12,19 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Imports:
+  dplyr,
   tibble,
   readr,
   leaflet,
   lubridate,
   stringr,
-  usethis
+  usethis,
+  scales
 Depends:
   tidyr,
-  dplyr,
   ggplot2,
   R (>= 2.10)
-  
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
