--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(eq_clean_data)
 export(eq_get_data)
 export(eq_get_data_raw)
 export(eq_location_clean)
+export(eq_map)
 export(geom_timeline)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(ggplot2,layer)
@@ -17,6 +19,9 @@ importFrom(grid,pointsGrob)
 importFrom(grid,segmentsGrob)
 importFrom(grid,textGrob)
 importFrom(grid,unit)
+importFrom(leaflet,addCircleMarkers)
+importFrom(leaflet,addTiles)
+importFrom(leaflet,leaflet)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(readr,read_delim)
