--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(leaflet,leaflet)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(readr,read_delim)
+importFrom(rlang,.data)
 importFrom(scales,alpha)
 importFrom(stringr,str_trim)
 importFrom(usethis,use_data)
